[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 31.1448

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 44.5, 45 )

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="RaycastDerecha" type="RayCast2D" parent="."]
position = Vector2( 12, 3 )
enabled = true
cast_to = Vector2( 33, 0 )
collision_mask = 512

[node name="RaycastIzquierda" type="RayCast2D" parent="."]
position = Vector2( -23, 1 )
enabled = true
cast_to = Vector2( -30, 0 )
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3.5, 5 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
